# P-Project

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEFI_YIELD_FARMING_IMPLEMENTATION_SUMMARY.md  DSA-IMPLEMENTATION.MD  DependencyConflictFix.md  Dockerfile  INSTRUCTION.md  LICENSE  NFT_MARKETPLACE_IMPLEMENTATION_SUMMARY.md  PEACE_STAKING_IMPLEMENTATION_SUMMARY.md  PRODUCT-FEATURES.MD  PRODUCT-ROADMAP.MD  PROJECT-LAYOUT.MD  PROJECT_TESTING_SOLUTION.md  README.md  SECURITY.md  api.md  build.ps1  build.sh  cex-dex.md  coin-prices.md  dao.md  deny.toml  deploy.md  dex-launch-strategy.md  docker-compose.yml  endpoint.md  evm-non-evm.md  growth-roadmap.md  p-coin-real-world-use-cases.md  p-project-contracts-features.md  p-project-use-cases.md  project-folders.md  project-web.md  (+12 more)
p-project-airdrop/: Cargo.toml  Dockerfile
p-project-airdrop/src/: lib.rs  main.rs
p-project-api/: Cargo.toml  Dockerfile
p-project-api/src/: handlers.rs  lib.rs  main.rs  merchant_handlers_test.rs  middleware.rs  ratelimit.rs  shared.rs
p-project-api/tests/: bridge_integration_test.rs  cashback_loyalty_integration_test.rs  dashboard_integration_test.rs  decimal_api_test.rs  donation_bots_integration_test.rs  ecommerce_integration_test.rs  events_integration_test.rs  exchange_listings_test.rs  integration.rs  learning_integration_test.rs  peace_staking_integration_test.rs  referral_integration_test.rs  remittance_integration_test.rs  security_middleware_test.rs
p-project-bridge/: Cargo.toml  DEPLOYMENT.md  Dockerfile
p-project-bridge/abi/: Bridge.json  ERC20.json
p-project-bridge/contracts/: Bridge.sol
p-project-bridge/src/: adapter.rs  config.rs  error.rs  eth.rs  eth_listener.rs  lib.rs  relayer.rs  solana.rs  solana_relayer.rs  store.rs  sui.rs  sui_relayer.rs
p-project-bridge/tests/: relayer_tests.rs
p-project-contracts/: ADVANCED_CRYPTOGRAPHY.md  API_DOCUMENTATION.md  Cargo.toml  DEVELOPER_GUIDES.md  Dockerfile  FORMAL_VERIFICATION.md  INTEGRATION_GUIDES.md  Makefile  TESTING_FRAMEWORK.md  USAGE_EXAMPLES.md  VERIFICATION_REPORT_TEMPLATE.md  install_verification_tools.sh  run-tests.ps1  run-tests.sh  run_verification.sh  verification.toml
p-project-contracts/benches/: criterion_benchmark.rs
p-project-contracts/src/: advanced_cryptography.rs  advanced_cryptography_test.rs  advanced_verification.rs  airdrop.rs  airdrop_db.rs  airdrop_test.rs  audit_registry.rs  audit_registry_test.rs  charity.rs  charity_accounting_test.rs  charity_stable_payout_test.rs  charity_test.rs  community_liquidity.rs  complete_deflationary_test.rs  compliance.rs  compliance_test.rs  comprehensive_test_suite.rs  comprehensive_verification.rs  cross_chain_liquidity.rs  cross_chain_liquidity_test.rs  cryptography_integration_test.rs  db_adapters.rs  db_integration_test.rs  deflationary_mechanisms_test.rs  dex_listing.rs  dex_listing_test.rs  error_tests.rs  formal_verification.rs  full_feature_integration_test.rs  full_integration_tests.rs  integration_test.rs  investor_vesting_test.rs  l2_batching.rs  l2_batching_test.rs  l2_cross_chain.rs  l2_cross_chain_test.rs  l2_model_checking.rs  l2_rollup.rs  l2_rollup_test.rs  l2_state_management.rs  (+41 more)
p-project-contracts/src/contracts/: .env.example  ADVANCED_FEATURES.md  AUTO_LIQUIDITY.md  Bridge.sol  DEPLOYMENT_FAQ.md  DEPLOYMENT_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LiquidityPool.sol  MockUniswapV2Factory.sol  MockUniswapV2Pair.sol  MockUniswapV2Router.sol  PProjectToken.sol  QUICK_START.md  README.md  SCHEDULED_OPERATIONS.md  SUMMARY.md  TREASURY_BUYBACKS.md  Treasury.sol  Vesting.sol  deploy.js  deployment-info-template.json  hardhat.config.js  package-lock.json  package.json
p-project-contracts/src/contracts/cache/: solidity-files-cache.json
p-project-contracts/src/contracts/contracts/: LiquidityPool.sol  MockUniswapV2Pair.sol  MockUniswapV2Router.sol  PProjectToken.sol  Treasury.sol  Vesting.sol
p-project-contracts/src/contracts/interfaces/: IUniswapV2Router02.sol
p-project-contracts/src/contracts/scripts/: backup-deployment.js  check-environment.js  cleanup-deployment.js  deployment-checklist.js  generate-report.js  initialize-contracts.js  prepare-dex-listing.js  reset-environment.js  restore-deployment.js  test-deployment.js  track-deployment.js  validate-config.js  verify-deployment.js
p-project-contracts/src/contracts/test/: Bridge.test.js  LiquidityPool.test.js  (+7 more)
p-project-contracts/src/solana/: test_staking.rs
p-project-contracts/tests/: burn_features.rs
p-project-core/: Cargo.toml  Dockerfile
p-project-core/src/: ai_service.rs  amount.rs  amount_migration.rs  budget_alternatives.rs  collaboration_service.rs  collaboration_service_test.rs  creator_rewards_service.rs  creator_rewards_service_test.rs  credit_service.rs  credit_service_test.rs  csr_service.rs  csr_service_test.rs  dao_governance_service.rs  dao_governance_service_test.rs  database.rs  developer_grants_service.rs  developer_grants_service_test.rs  digital_governance_service.rs  digital_governance_service_test.rs  ecosystem_service.rs  ecosystem_service_test.rs  exchange_listing_service.rs  exchange_listing_service_test.rs  game_currency_service.rs  game_currency_service_test.rs  government_service.rs  government_service_test.rs  identity_service.rs  identity_service_test.rs  iot_service.rs  ipfs.rs  ipfs_test.rs  lib.rs  main.rs  marketing_community_service.rs  marketing_community_service_test.rs  marketing_service.rs  marketing_service_test.rs  merchant_service.rs  merchant_service_test.rs  (+30 more)
p-project-core/src/database/: mongodb.rs  mysql.rs  redis.rs
p-project-dao/: Cargo.toml  Dockerfile
p-project-dao/src/: lib.rs
p-project-dao/tests/: dao_governance_test.rs  mongo_integration.rs
p-project-staking/: Cargo.toml
p-project-staking/src/: lib.rs
p-project-staking/tests/: staking_service_test.rs
p-project-web/: Cargo.toml  Dockerfile
p-project-web/src/: lib.rs  server_components.rs  wasm_components.rs
p-project-web/tests/: wasm_nft_test.rs  wasm_test.rs
(+83 files in other folders)
