[package]
name = "p-project"
version = "0.1.0"
edition = "2021"
description = "P-Project: A Social Impact Blockchain Ecosystem combining DeFi, AI, IoT, and DAO governance for humanitarian aid and social verification"

[dependencies]
p-project-core = { path = "p-project-core" }
p-project-contracts = { path = "p-project-contracts" }
p-project-api = { path = "p-project-api" }
p-project-dao = { path = "p-project-dao" }
p-project-staking = { path = "p-project-staking" }
p-project-airdrop = { path = "p-project-airdrop" }
p-project-bridge = { path = "p-project-bridge" }
p-project-web = { path = "p-project-web" }

[workspace]
members = [
    "p-project-core",
    "p-project-contracts",
    "p-project-api",
    "p-project-dao",
    "p-project-staking",
    "p-project-airdrop",
    "p-project-bridge",
    "p-project-web",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = { version = "2.0", features = ["tokio-runtime"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
hex = "0.4"
axum = "0.7"
rust_decimal = "1.36"