[package]
name = "p-project-api"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
p-project-contracts = { path = "../p-project-contracts" }
p-project-airdrop = { path = "../p-project-airdrop" }
axum.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
tower-http = { version = "0.4", features = ["cors", "fs"] }
chrono.workspace = true