[package]
name = "p-project-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "p_project_api"
path = "src/lib.rs"

[[bin]]
name = "p-project-api"
path = "src/main.rs"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[dependencies]
p-project-core = { path = "../p-project-core" }
p-project-contracts = { path = "../p-project-contracts" }
p-project-airdrop = { path = "../p-project-airdrop" }
axum.workspace = true
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
tower-http = { version = "0.4", features = ["cors", "fs"] }
chrono.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "macros"] }
uuid = { version = "1.4", features = ["v4"] }