[package]
name = "p-project-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
serde.workspace = true
tokio.workspace = true
async-trait = "0.1"
ethers = { version = "2", default-features = false, features = ["abigen", "ws", "rustls"] }
chrono = "0.4"
web3 = "0.18"

# Optional Solana relayer dependencies (feature-gated to avoid workspace conflicts)
solana-client = { version = "1.10", optional = true }
solana-sdk = { version = "1.10", optional = true }

[features]
default = []
solana-relayer = ["dep:solana-client", "dep:solana-sdk"]

[[bin]]
name = "p-project-bridge-relayer"
path = "src/bin/relayer.rs"

[[bin]]
name = "eth-listener"
path = "src/bin/eth_listener.rs"

[[bin]]
name = "solana-relayer"
path = "src/bin/solana_relayer.rs"
required-features = ["solana-relayer"]

[[bin]]
name = "sui-relayer"
path = "src/bin/sui_relayer.rs"
