[package]
name = "p-project-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
serde.workspace = true
chrono.workspace = true
md5.workspace = true
hex.workspace = true
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx.workspace = true
