[package]
name = "p-project-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
serde.workspace = true
sha3 = "0.10"
ripemd = "0.1"
chrono.workspace = true
md5.workspace = true
hex.workspace = true
serde_json = "1.0"
kani-verifier = { version = "0.63", optional = true }
# Post-quantum cryptography
kyberlib = "0.0.6"
# Zero-knowledge proofs
ark-ec = "0.5.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.5.0"
ark-serialize = "0.4.2"
ark-std = "0.5.0-alpha.0"
ark-bls12-381 = "0.5.0"
# Threshold signatures
multi-party-ecdsa = "0.8.1"

[dev-dependencies]
# Benchmarking
criterion = "0.5"
# Fuzzing
arbitrary = "1.3"
proptest = "1.4"
# Security auditing
cargo-audit = "0.17"

[features]
default = []
verification = ["kani-verifier"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx.workspace = true

[[bench]]
name = "criterion_benchmark"
harness = false