[package]
name = "p-project-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
hex = "0.4"
serde_json = "1.0"
kani-verifier = { version = "0.63", optional = true }
rust_decimal = "1.36"
# Post-quantum cryptography
kyberlib = "0.0.6"
# Zero-knowledge proofs
ark-ec = "0.4.2"
ark-ff = "0.5.0"
ark-poly = "0.4.2"
ark-poly-commit = "0.5.0"
ark-serialize = "0.4.2"
ark-std = "0.5.0-alpha.0"
ark-bls12-381 = "0.5.0"
# Threshold signatures
multi-party-ecdsa = "0.8.1"

[dev-dependencies]
# Benchmarking
criterion = "0.5"
# Fuzzing
arbitrary = "1.3"
proptest = "1.4"
# Security auditing
cargo-audit = "0.17"

[features]
default = []
verification = ["kani-verifier"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "rust_decimal"] }

[[bench]]
name = "criterion_benchmark"
harness = false
