[package]
name = "p-project-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p-project-core-test"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1"
rust_decimal.workspace = true
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
csv = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "mysql", "chrono"] }
redis = { workspace = true, features = ["tokio-comp"] }
mongodb = { workspace = true, features = ["tokio-runtime"] }

[features]
decimal-amount = []
