[package]
name = "p-project-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p-project-core-test"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
futures-util = "0.3"
tokio = { version = "1.0", features = ["sync"] }
async-trait = "0.1"
rust_decimal = "1.36"
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
csv = "1.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = { version = "2.0", features = ["tokio-runtime"] }

[features]
decimal-amount = []
