[package]
name = "p-project-dao"
version = "0.1.0"
edition = "2021"

[dependencies]
p-project-core = { path = "../p-project-core" }
p-project-contracts = { path = "../p-project-contracts" }
serde.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
